[package]
name = "wcml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.3.0", optional = true }
chumsky = "0.9.3"
serde = "1.0.193"
serde_yaml = "0.9.29"
strum = "0.25.0"
strum_macros = "0.25.3"

[features]
default = ["ariadne"]
